# mcdm

./: .gitignore  CMakeLists.txt  README.md  RFIDGridmap.cpp  RadarModel.cpp  edge.h  evaluationrecords.cpp  evaluationrecords.h  graphpose.cpp  graphpose.h  grid_map_main.cpp  grid_map_test.cpp  main.cpp  main_2.cpp  main_correct_astar.cpp  main_marco.cpp  main_new.cpp  map.cpp  map.h  mcdm.cpp  mcdm_onlin_exploration_ros.kdev4  mcdm_online_exploration_ros.kdev4  mcdmfunction.cpp  mcdmfunction.h  newray.cpp  newray.h  play_with_eigen.cpp  pose.cpp  pose.h  random_frontier.cpp  random_walk.cpp  ray.cpp  ray.h  test_gaussian_kernel.cpp  test_log_model.cpp  test_log_model_mcdm_config.cpp  utils.cpp  willow-full-bw.pgm
.kdev4/: mcdm_onlin_exploration_ros.kdev4  mcdm_online_exploration_ros.kdev4
Criteria/: .criteriaName.h.kate-swp  .criterion.h.kate-swp  .traveldistancecriterion.cpp.kate-swp  .traveldistancecriterion.h.kate-swp  RFIDCriterion.cpp  batterystatuscriterion.cpp  criteriaName.h  criterion.cpp  criterion.h  criterioncomparator.cpp  criterioncomparator.h  criterionsorter.cpp  criterionsorter.h  informationgaincriterion.cpp  informationgaincriterion.h  mcdmweightreader.cpp  mcdmweightreader.h  sensingtimecriterion.cpp  sensingtimecriterion.h  traveldistancecriterion.cpp  traveldistancecriterion.h  weightmatrix.cpp  weightmatrix.h
Images/: INB_atrium.pgm  INB_atrium_1m20px.pgm  cor_1m.pgm  cor_map_05_00.pgm  cor_map_05_00_new.pgm  cor_map_05_00_new1.pgm  cor_map_05_00_old.pgm  cor_map_25_00_new1.pgm  cor_test.pgm  cor_test_2.pgm  inb3123.pgm  inb3123_1m4px.pgm  inb3123_1m4px_small.pgm  inb3123_small.pgm  inb_eng_5cm.pgm  inbatrium_small.pgm  inbeng_small.pgm  inbeng_small_correct.pgm  map4_friburg.pgm  map4_friburg.pgm~  map4_friburg.txt  map_2_3.pgm  map_asif_new.pgm~  map_asif_new2.pgm  map_ps_small.pgm  mfc_test.pgm  my_map.yaml  ncfm_old.pgm  ncfm_small.pgm  orebro_small.pgm  pippo.pgm  test_bmp.pgm  test_model.pgm
Images/Extra/: description.txt
Maps/: frieburg.pgm  map_5.pgm
PathFinding/: astar.cpp  astar.h  node.cpp
Results/: Comparison-for-astar (1).txt  comparison_mains.txt  input.txt
config/: tag_inb3123_0.yaml  tag_inb3123_1.yaml  tag_inb3123_2.yaml  tag_inbatrium_0.yaml  tag_inbatrium_1.yaml  tag_inbatrium_2.yaml  tag_inbeng.yaml  tag_inbeng_0.yaml  tag_inbeng_1.yaml  tag_inbeng_2.yaml  tag_inbeng_3.yaml  tag_ncfm_0.yaml  tag_ncfm_1.yaml  tag_ncfm_2.yaml  tag_orebro.yaml  tag_orebro_0.yaml  tag_orebro_1.yaml  tag_orebro_2.yaml  transmission_model.txt
include/: RFIDGridmap.h  RadarModel.hpp  constants.h  evaluationrecords.h  map.h  mcdmfunction.h  newray.h  pose.h  utils.h
include/Criteria/: RFIDCriterion.h  batterystatuscriterion.h  criteriaName.h  criterion.h  informationgaincriterion.h  mcdmweightreader.h  sensingtimecriterion.h  traveldistancecriterion.h  weightmatrix.h
include/PathFinding/: astar.h
papers/: choquet_description.md
radio_models/: propagationModel.cpp
scripts/: coverage_distance.sh  csv2latex.tex  getAverageDistsFromCSVs.py  getAveragesFromCSVs.py  getAveragesFromCSVs_complete.py  grid_search_mcdm.sh  grid_search_wAVG.sh  mcdm_vs_avg.sh  plot_coverage.py  plot_coverage_gazebo.py  plot_coverage_std.py  plot_detection_accuracy_vs_ellipse_size.py  plot_distance_std.py  plot_entropy.py  plot_entropy_comparison_bayesNBS_NBS.py  plot_entropy_comparison_kernel.py  plot_entropy_comparison_motion.py  plot_esponential_function.py  plot_grid_search.py  plot_localization_comparison_bayesNBS_NBS.py  plot_localization_error.py  plot_localization_fixed_kernel.py  plot_localization_fixed_motion.py  plot_mcdm_vs_avg.py  ral_table.tex  random_frontier.sh  random_frontier_parallel.sh  random_walk.sh  random_walk_parallel.sh  run_all_experiments.bash  run_coverage_distance.sh  run_entropy_test_parallel.sh  run_experiments.sh  run_experiments_iliad.sh  run_experiments_inb3123.sh  run_experiments_inb3123_parallel.sh  run_experiments_inb_atrium.sh  run_experiments_inb_eng.sh  run_experiments_inbatrium_parallel.sh  run_experiments_inbeng_parallel.sh  (+8 more)
test/: test_criterioncomparator.cpp  test_evaluationrecords.cpp  test_graphpose.cpp  test_mcdmfunction.cpp  test_pose.cpp  test_weightmatrix.cpp
